Add in material theme, basic log in mechanism to be updated, testing component, and table to display items

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,11 @@
-<p>
-  home works!
-</p>
+<button (click)="ping()">Test Ping</button>
+<button (click)="getAllItems()">Get All Items</button>
+<button (click)="getOneItem(1)">Get One Item</button>
+<button (click)="insertOneItem(myItem)">Insert Item</button>
+<!--</br>-->
+<input [(ngModel)]=reserve>
+<!--</br>-->
+<input [(ngModel)]=myItem.description>
+<!--</br>-->
+<input [(ngModel)]=myItem.itemId>
+<!--<button (click)="onClickMe()">Click me!</button>-->
