--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -8,23 +8,14 @@
     [opened]="!(isHandset$ | async)">
     <mat-toolbar color="primary">Menu</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item href="#">Link 1</a>
-      <a mat-list-item href="#">Link 2</a>
-      <a mat-list-item href="#">Link 3</a>
+      <a mat-list-item (click)=route()>Items</a>
+      <a mat-list-item routerLink='/home'>Dev Test</a>
+      <button mat-raised-button (click)="openDialog()">Log In!</button>
+      <a mat-list-item >{{welcomeMsg}}</a>
+      <a *ngIf="maxAutoBidAmount" mat-list-item >Max Auto: {{maxAutoBidAmount}}</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
-    <mat-toolbar color="primary">
-      <button
-        type="button"
-        aria-label="Toggle sidenav"
-        mat-icon-button
-        (click)="drawer.toggle()"
-        *ngIf="isHandset$ | async">
-        <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
-      </button>
-      <span>Template</span>
-    </mat-toolbar>
-    <!-- Add Content Here -->
+    <router-outlet></router-outlet>
   </mat-sidenav-content>
 </mat-sidenav-container>
