--- a/src/app/nav/logon-dialog.html
+++ b/src/app/nav/logon-dialog.html
@@ -1,14 +1,10 @@
 <h1 mat-dialog-title>Log In</h1>
 <div mat-dialog-content>
-  <p>Name</p>
+  <p>User ID</p>
   <mat-form-field>
-    <input matInput [(ngModel)]="data.bidderName">
+    <input matInput [(ngModel)]="data.userId">
   </mat-form-field>
 
-  <p>Max Auto Bid</p>
-  <mat-form-field>
-    <input matInput [(ngModel)]="data.maxBidAmount">
-  </mat-form-field>
 </div>
 <div mat-dialog-actions>
   <button mat-button (click)="onNoClick()">Exit</button>
